--- a/DwayneNeedDemo/MainWindow.xaml
+++ b/DwayneNeedDemo/MainWindow.xaml
@@ -1,11 +1,25 @@
-﻿<Window x:Class="DwayneNeedDemo.MainWindow"
+﻿<Window Title="DwayneNeedDemo"
+        x:Class="DwayneNeedDemo.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:form="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
+        xmlns:interop="clr-namespace:Microsoft.DwayneNeed.Interop;assembly=Microsoft.DwayneNeed"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Width="800"
+        Height="450"
+        mc:Ignorable="d">
     <Grid>
-        
+        <interop:AirspaceDecorator AirspaceMode="Redirect"
+                                   IsInputRedirectionEnabled="True"
+                                   IsOutputRedirectionEnabled="True">
+            <WindowsFormsHost>
+                <form:WebBrowser x:Name="WebBrowser" />
+            </WindowsFormsHost>
+        </interop:AirspaceDecorator>
+
+        <Border Width="240"
+                Height="180"
+                Background="#ABABAB" />
     </Grid>
 </Window>
